<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2023 Amazon.com, Inc. or its affiliates. All Rights Reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License").
  ~ You may not use this file except in compliance with the License.
  ~ A copy of the License is located at
  ~
  ~  http://aws.amazon.com/apache2.0
  ~
  ~ or in the "license" file accompanying this file. This file is distributed
  ~ on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
  ~ express or implied. See the License for the specific language governing
  ~ permissions and limitations under the License.
  -->

<resources>
    <string name="amplify_ui_liveness_get_ready_center_face_label">Center your face</string>
    <string name="amplify_ui_liveness_get_ready_photosensitivity_title">Photosensitivity warning</string>
    <string name="amplify_ui_liveness_get_ready_photosensitivity_description">This check flashes different colors. Use caution if you are photosensitive.</string>
    <string name="amplify_ui_liveness_get_ready_a11y_photosensitivity_icon_content_description">Photosensitivity Information</string>
    <string name="amplify_ui_liveness_get_ready_photosensitivity_dialog_title">Photosensitivity warning</string>
    <string name="amplify_ui_liveness_get_ready_photosensitivity_dialog_description">Some people may experience epileptic seizures when exposed to colored lights. Use caution if you, or anyone in your family, have an epileptic condition.</string>
    <string name="amplify_ui_liveness_get_ready_photosensitivity_dialog_dismiss">Got it</string>
    <string name="amplify_ui_liveness_get_ready_begin_check">Start video check</string>
    <string name="amplify_ui_liveness_challenge_recording_indicator_label">REC</string>
    <string name="amplify_ui_liveness_challenge_instruction_hold_face_during_freshness">Hold still</string>
    <string name="amplify_ui_liveness_challenge_instruction_move_face_further">Move back</string>
    <string name="amplify_ui_liveness_challenge_instruction_move_face_closer">Move closer</string>
    <string name="amplify_ui_liveness_challenge_instruction_move_face">Move face in front of camera</string>
    <string name="amplify_ui_liveness_challenge_instruction_multiple_faces_detected">Only one face per check</string>
    <string name="amplify_ui_liveness_challenge_connecting">Connecting</string>
    <string name="amplify_ui_liveness_challenge_verifying">Verifying</string>
    <string name="amplify_ui_liveness_challenge_a11y_cancel_content_description">Cancel Challenge</string>
</resources>